# _wg_412

./: .gitignore  README.md  plan01.xlsx
a996rr/: TheApp.cpp  TheApp.h
a996rr/dt/md/: ball1.txt
a996rr/dt/md/cars/: car-colors.txt
a996rr/dt/md/cars/us/998_1929_deusenberg_j/: ondeploy_gatsby.txt  root01.txt  root01_gatsby.txt  top0.txt  top2.txt
a996rr/dt/md/cars/us/999_1935_deusenberg_ssj/: rim01.txt
a996rr/dt/md/misc/us/999_marlboro01red/: root00.txt  root01.txt
a996rr/dt/md/parts/light/: dir01flat.txt  dir02round_orange.txt  dir02round_red.txt  dir02round_white.txt
a996rr/dt/md/rr/: line-green.txt
a996rr/dt/md/rr/bogie/96us_openwheels/: NormalMap.psd  bogie00.txt
a996rr/dt/md/rr/bogie/97us_phase1/: bogie00.txt
a996rr/dt/md/rr/bogie/99us40s/: bogie00.txt  bogie01wcoupler.txt
a996rr/dt/md/rr/coupler/: couplerbox01.txt  couplerlock01.txt  couplershaft01.txt  gangway-rib.txt  gangway-slit.txt  gangwayscouple01.txt
a996rr/dt/md/rr/us/fr/998_box-sigar/: root00.txt
a996rr/dt/md/rr/us/fr/998_box-sigar/01dutch/: root01.txt
a996rr/dt/md/rr/us/fr/999_tank3dome/: tank01.txt
a996rr/dt/md/rr/us/lc/997_sc-44/: body01.txt  bodyback01.txt  rooftop.txt
a996rr/dt/md/rr/us/lc/998_alc-42/: body01.psd  bodyback01.txt  cabin01.txt  root00.txt
a996rr/dt/md/rr/us/lc/999_0-6-0dockside/: boiler01.txt  bumper01.txt  door_right.txt  wheelpair9.txt
a996rr/dt/md/rr/us/ps/996_round/: frontwall.txt
a996rr/dt/md/rr/us/ps/997_surfliner/: body-roof.txt  doors.txt  frame04.txt  frame10.txt  lv1back08.txt  lv1mid54wnd3.txt
a996rr/dt/md/rr/us/ps/998_romb/: frontwall.txt
a996rr/dt/md/rr/us/ps/999_superliner/: frame04.txt  inside-chair.txt  inside13coach.txt  inside13coupe.txt  inside13table.txt  lv1front52wnd0.txt  lv1front52wnd3.txt  lv2wnd09.txt  lv2wnd11.txt
a996rr/model_car/: CarWheel.cpp  CarWheel.h
a996rr/pa/app/: build.gradle
a996rr/pa/app/src/main/: AndroidManifest.xml
a996rr/pa/app/src/main/assets/dt/: 02.tga  test01.txt
a996rr/pa/app/src/main/cpp/: CMakeLists.txt  main.cpp
a996rr/pa/app/src/main/res/values/: themes.xml
a996rr/pa/app/src/main/res/values-night/: themes.xml
a996rr/pa/gradle/wrapper/: gradle-wrapper.properties
a996rr/pw/: main.cpp  pw.sln  pw.vcxproj  pw.vcxproj.filters
a996rr/rr/: Bell.cpp  Bell.h  Coupler.cpp  Coupler.h  ExhaustLoco.cpp  ExhaustLoco.h  Gangway.cpp  Gangway.h  Gear.cpp  Gear.h  ModelLoaderRR.cpp  ModelLoaderRR.h  OnRails.cpp  OnRails.h  RRUI.cpp  RRUI.h  Rail.cpp  Rail.h  RailCoord.cpp  RailCoord.h  RailMap45.cpp  RailMap45.h  RollingStock.cpp  RollingStock.h  Train.h  WheelPair.cpp  WheelPair.h  Whistle.h
engine/: Camera.cpp  Camera.h  CameraMan.cpp  CameraMan.h  Coords.cpp  Coords.h  DrawJob.cpp  DrawJob.h  FileLoader.cpp  FileLoader.h  Material.cpp  Material.h  MaterialAdjust.cpp  MaterialAdjust.h  MyColor.cpp  MyColor.h  MySound.cpp  MySound.h  SceneSubj.cpp  SceneSubj.h  ScreenSubj.cpp  ScreenSubj.h  Shader.cpp  Shader.h  Shadows.cpp  Shadows.h  Texture.cpp  Texture.h  TheTable.cpp  TheTable.h  XMLparser.cpp  XMLparser.h  linmath.h  utils.cpp  utils.h
engine/dt/shaders/: depthmap_f.txt  flat_utex_v.txt  nm_v.txt
engine/dt/ui/buttons/: drag_table_hint_128.psd  edit_128.psd  edit_hint_128.psd
engine/dt/ui/cursor/: palm01.psd
engine/dt/ui/signs/: signs01.psd  signs02.psd
engine/geom/: ArcXY.cpp  ArcXY.h  Chorda.cpp  Chorda.h  Gabarites.cpp  Gabarites.h  Line3D.cpp  Line3D.h  LineXY.cpp  LineXY.h  MyPolygon.cpp  MyPolygon.h  MyPolygonRib.cpp  MyPolygonRib.h
engine/gltf/: GLTFanim2nodesMap.cpp  GLTFanim2nodesMap.h  GLTFanimation.cpp  GLTFanimation.h  GLTFnode.cpp  GLTFnode.h  GLTFparser.cpp  GLTFparser.h  GLTFskin.cpp  GLTFskin.h  GLTFskinShader.cpp  GLTFskinShader.h  tiny_gltf.h
engine/modeler/: CoordOnLine.cpp  CoordOnLine.h  Group01.h  GroupTransform.cpp  GroupTransform.h  ModelBuilder.cpp  ModelBuilder.h  ModelBuilder1base.cpp  ModelBuilder1base.h  ModelLoader.cpp  ModelLoader.h  ModelLoaderCmd.cpp  ModelLoaderCmd.h  TexCoords.cpp  TexCoords.h  Triangle01.h  Vertex01.h  VirtualShape.h
engine/modeler/subjs/: DirLight.cpp  DirLight.h  Exhaust.cpp  Exhaust.h  Fan.cpp  Fan.h  Interior.cpp  Interior.h  Smoke.cpp  Smoke.h  Switcher.cpp  Switcher.h
engine/ui/: ButtonClose.cpp  ButtonClose.h  ButtonEdit.cpp  ButtonEdit.h  ButtonMap.cpp  ButtonMap.h  ButtonMove.cpp  ButtonMove.h  ButtonTableDrag.cpp  ButtonTableDrag.h  ButtonUncouple.cpp  ButtonUncouple.h  Coords2D.cpp  Coords2D.h  MeltingSign.cpp  MeltingSign.h  ProgressBar.cpp  ProgressBar.h  ScreenFrame.cpp  ScreenFrame.h  ScreenLine.cpp  ScreenLine.h  TouchScreen.cpp  TouchScreen.h  UISubj.cpp  UISubj.h  UIhint.cpp  UIhint.h
p_android/: input.cpp  input.h  platform.cpp  platform.h
p_windows/: input.cpp  platform.cpp  platform.h
p_windows/glad/include/glad/: glad.h
p_windows/glad/src/: glad.c
(+130 files in other folders)
